2003-07-11  Zoltan Varga  <vargaz@freemail.hu>

	* ModuleBuilderTest.cs: Added tests for IsTransient ().

	* ModuleBuilderTest.cs: Added tests for DefineDocument ().

	* AssemblyBuilderTest.cs: Added error handling tests.

2003-06-30  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBuilderTest.cs (TestReturnType): Make test more general so
	it works both on Mono and MS.NET.

2003-06-15  Zoltan Varga  <vargaz@freemail.hu>

	* EventBuilderTest.cs: New file.

	* PropertyBuilderTest.cs: New file.

2003-05-28  Nick Drochak <ndrochak@gol.com>

	* MethodBuilderTest: correct order of expected and actual values.

2003-05-21  Zoltan Varga  <vargaz@freemail.hu>

	* ModuleBuilderTest.cs: New file.

2003-05-20  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilderTest.cs: More tests.

2003-05-19  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyBuilderTest.cs: More tests.

2003-05-12  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBuilderTest.cs: Comment out test which fails because of a mono
	extension to DefineParameter.

2003-02-13  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyBuilderTest.cs: New file.

2003-02-12  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBuilderTest.cs: Added test for setting MethodImplAttributes
	using a custom attribute.

2003-02-10  Zoltan Varga  <vargaz@freemail.hu>

	* ConstructorBuilderTest.cs: added SetCustomAttribute() tests.

	* MethodBuilderTest.cs: updated to NUNIT2 conventions.

	* ConstructorBuilderTest.cs: New file.

2003-02-09  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilderTest.cs: Added lots of new tests.

2003-02-08  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilderTest.cs: New file.

	* MethodBuilderTest.cs ChangeLog: New files.